[build-system]
requires = [
    "flit_core>=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-pyensight-core"
version = "0.5.2"
description = "A python wrapper for Ansys EnSight"
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
    "ansys-api-pyensight==0.2.2",
    "requests>=2.28.2",
    "pyansys-docker>=5.0.4",
    "urllib3<2",
    "typing>=3.7.4.3",
    "typing-extensions>=4.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.3.0"
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "bump2version>=1.0.1",
    "ipdb>=0.9.4",
    "dill>=0.3.5.1",
    "pre-commit>=3.3.3",
]
tests = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "dill>=0.3.5.1",
    "pytest-mock==3.10.0",
    "urllib3==1.26.10",
    "requests>=2.28.2",
    "pyansys-docker>=5.0.4",
]
doc = [
    "Sphinx==7.0.1",
    "numpydoc==1.5.0",
    "ansys-sphinx-theme==0.9.9",
    "sphinx-copybutton==0.5.1",
    "sphinx-gallery==0.13.0",
    "sphinxcontrib-mermaid==0.8.1",
    "pyansys-docker>=5.0.4",
    "matplotlib==3.7.1",
    "requests>=2.28.2",
    "sphinxcontrib.jquery==3.0.0",
    "coverage-badge==1.1.0",
    "sphinxcontrib-openapi==0.8.1"
]

[project.urls]
Documentation = "https://ensight.docs.pyansys.com/"
Homepage = "https://github.com/ansys/pyensight"
Source = "https://github.com/ansys/pyensight"
Tracker = "https://github.com/ansys/pyensight/issues"
Changelog =  "https://github.com/ansys/pyensight/blob/main/CHANGELOG.rst"

[tool.flit.module]
name = "ansys.pyensight.core"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if selfdebug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod"]

ignore_errors = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.black]
line-length = 100
src_paths = ["src/ansys", "doc"]

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = [
    "tests",
]
addopts = "--setup-show --cov=ansys.pyensight.core --cov-report html:coverage-html --cov-report term --cov-config=.coveragerc --capture=tee-sys --tb=native -p no:warnings"
markers =[
    "integration:Run integration tests",
    "smoke:Run the smoke tests",
    "unit:Run the unit tests",
    ]
norecursedirs = ".git .idea"
filterwarnings = "ignore:.+:DeprecationWarning"


[tool.codespell]
ignore-words-list = "ro, te, pres"
quiet-level = 3
skip = "*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.svg,tests/ensigth_api_test_assets.txt"

[tool.isort]
profile = "black"
skip_gitignore = true
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
filter_files = true
src_paths = ["ansys", "doc", "tests"]

[tool.bandit]
level = "HIGH"
number = "3"
recursive = true
exclude = ["venv/*", "tests/*"]

[tool.mypy]
python_version = 3.8
strict = false
namespace_packages = true
explicit_package_bases = true
exclude = ["tests/", "^doc"]
no_site_packages = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["grpc",
 "grpc_health",
 "grpc_bindings",
 "requests",
 "ansys",
 "ansys.*",
 "docker",
 "dill",
 "IPython.display",
 "enve",
 "urllib3",
 "ensight",
 "numpy",
 "PIL",
 "simple_upload_server.*"
]
ignore_missing_imports = true

[pydocstyle]
convention = "numpy"
